# TFG-pipeExec

./: .gitignore  CMakeCache.txt  CMakeLists.txt  DOXYGEN.md  README.md  SimpleMemoryManager.cpp  SimpleMemoryManager.h  dataObj.h  doxygen.config  makefile  pipeExec.cpp  pipeExec.h  pipeObjs.h  project.4coder  testPipeExec.cpp  testPipeExec.h
docs/docbook/: adder_8h.xml  adder_8h_source.xml  annotated.xml  classAdder.xml  classData.xml  classDoublePipe.xml  classEdgeDetector.xml  classImgOutputer.xml  classImgTruncator.xml  classIndexer.xml  classMemoryManager.xml  classNullUnit.xml  classNumberPrinter.xml  classPipeNode.xml  classPipeline.xml  classProcessingUnitInterface.xml  classSemaphore.xml  classSimpleIndexer.xml  classSleeper.xml  data_8cc.xml  data_8h.xml  data_8h_source.xml  double__pipe_8cc.xml  double__pipe_8h.xml  double__pipe_8h_source.xml  double__pipe__main_8cc_source.xml  edge__detector_8cc.xml  edge__detector_8h.xml  edge__detector_8h_source.xml  img__outputer_8h.xml  img__outputer_8h_source.xml  img__truncator_8cc.xml  img__truncator_8h.xml  img__truncator_8h_source.xml  index.xml  indexer_8cc.xml  indexer_8h.xml  indexer_8h_source.xml  islands__main_8cc_source.xml  libraries_8h_source.xml  (+32 more)
docs/html/: adder_8h.html  adder_8h_source.html  annotated.html  classAdder-members.html  classAdder.html  classData-members.html  classData.html  classDoublePipe-members.html  classDoublePipe.html  classEdgeDetector-members.html  classEdgeDetector.html  classImgOutputer-members.html  classImgOutputer.html  classImgTruncator-members.html  classImgTruncator.html  classIndexer-members.html  classIndexer.html  classMemoryManager-members.html  classMemoryManager.html  classNullUnit-members.html  classNullUnit.html  classNumberPrinter-members.html  classNumberPrinter.html  classPipeNode-members.html  classPipeNode.html  classPipeline-members.html  classPipeline.html  classProcessingUnitInterface-members.html  classProcessingUnitInterface.html  classSemaphore-members.html  classSemaphore.html  classSimpleIndexer-members.html  classSimpleIndexer.html  (+77 more)
include/: CMakeLists.txt
include/CUDA/: toy.cu
include/definitions/: data.cc  memory_manager.cc  pipe_node.cc  pipeline.cc  semaphore.cc
include/definitions/pu/: adder.cc  double_pipe.cc  edge_detector.cc  img_outputer.cc  img_truncator.cc  indexer.cc  null_unit.cc  number_printer.cc  simple_indexer.cc  sleeper.cc
include/headers/: data.h  libraries.h  memory_manager.h  pipe_node.h  pipeline.h  processing_unit_interface.h  semaphore.h
include/headers/pu/: adder.h  double_pipe.h  edge_detector.h  img_outputer.h  img_truncator.h  indexer.h  null_unit.h  number_printer.h  simple_indexer.h  simple_reconstructor.h  sleeper.h
input_images/: heightmap0.mat  perlin  perlin.cc  tiff.py
src/: double_pipe_main.cc  islands_main.cc  main.cc  processing_units.h  simple_edge_detection_main.cc  sleeper_main.cc
tests/: memory_manager.test.cc  pipeline.test.cc  semaphore.test.cc
(+151 files in other folders)
